--- a/Caronae/Ride/RideListController.xib
+++ b/Caronae/Ride/RideListController.xib
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RideListController">
             <connections>
                 <outlet property="directionControl" destination="EV6-FJ-bWI" id="6os-mv-9Pg"/>
+                <outlet property="filterViewHeightZero" destination="KkT-80-EcW" id="5Wf-bl-c9Z"/>
                 <outlet property="tableView" destination="6Ac-hY-QKJ" id="WUU-Ci-sdD"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -31,7 +31,7 @@
                     </connections>
                 </tableView>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="EV6-FJ-bWI">
-                    <rect key="frame" x="56" y="83" width="263" height="29"/>
+                    <rect key="frame" x="56" y="120" width="263" height="29"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <segments>
                         <segment title="Chegando na UFRJ"/>
@@ -54,25 +54,66 @@
                         <action selector="didChangeDirection:" destination="-1" eventType="valueChanged" id="jLV-93-OKd"/>
                     </connections>
                 </segmentedControl>
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Ip-RW-iit" userLabel="FilterView">
+                    <rect key="frame" x="0.0" y="64" width="375" height="45"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hah-mc-HGX">
+                            <rect key="frame" x="154.5" y="9" width="205.5" height="28"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
+                            <state key="normal" title="LIMPAR">
+                                <color key="titleColor" red="0.92941176470588238" green="0.1803921568627451" blue="0.050980392156862744" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="didTapClearFilterButton:" destination="-1" eventType="touchUpInside" id="r5a-bM-RPL"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filtrando:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ETP-H5-MAv">
+                            <rect key="frame" x="8" y="15" width="55.5" height="15"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
+                            <color key="textColor" red="0.33725490196078434" green="0.33725490196078434" blue="0.34509803921568627" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Freguesia, CT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g7Q-xw-iaC">
+                            <rect key="frame" x="71.5" y="15" width="78" height="15"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" red="0.33725490200000002" green="0.33725490200000002" blue="0.34509803919999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstItem="ETP-H5-MAv" firstAttribute="centerY" secondItem="0Ip-RW-iit" secondAttribute="centerY" id="11v-Ad-bMQ"/>
+                        <constraint firstItem="Hah-mc-HGX" firstAttribute="centerY" secondItem="0Ip-RW-iit" secondAttribute="centerY" id="82i-ax-eQR"/>
+                        <constraint firstItem="ETP-H5-MAv" firstAttribute="leading" secondItem="0Ip-RW-iit" secondAttribute="leading" constant="8" id="8FZ-h3-O8Y"/>
+                        <constraint firstItem="g7Q-xw-iaC" firstAttribute="leading" secondItem="ETP-H5-MAv" secondAttribute="trailing" constant="8" id="Azq-f4-Kej"/>
+                        <constraint firstAttribute="height" id="KkT-80-EcW"/>
+                        <constraint firstAttribute="height" priority="900" constant="45" id="Snl-jF-m6s"/>
+                        <constraint firstAttribute="trailing" secondItem="Hah-mc-HGX" secondAttribute="trailing" constant="15" id="jZA-KK-YgS"/>
+                        <constraint firstItem="g7Q-xw-iaC" firstAttribute="centerY" secondItem="0Ip-RW-iit" secondAttribute="centerY" id="n5t-qE-UQE"/>
+                        <constraint firstItem="Hah-mc-HGX" firstAttribute="leading" secondItem="g7Q-xw-iaC" secondAttribute="trailing" constant="5" id="y5m-OA-Wzk"/>
+                    </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="KkT-80-EcW"/>
+                        </mask>
+                    </variation>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="0Ip-RW-iit" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="5bk-8Y-Znt"/>
                 <constraint firstItem="EV6-FJ-bWI" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="6eO-dw-m6k"/>
                 <constraint firstItem="6Ac-hY-QKJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Drr-QV-nW1"/>
-                <constraint firstItem="EV6-FJ-bWI" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="topMargin" constant="75" id="Gzr-a2-ChU">
-                    <variation key="heightClass=compact" constant="45"/>
-                </constraint>
+                <constraint firstItem="EV6-FJ-bWI" firstAttribute="top" secondItem="0Ip-RW-iit" secondAttribute="bottom" constant="11" id="GTi-K9-jvt"/>
                 <constraint firstAttribute="bottom" secondItem="6Ac-hY-QKJ" secondAttribute="bottom" id="Qfk-bn-OKw"/>
                 <constraint firstItem="6Ac-hY-QKJ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="UMa-bL-jCs"/>
                 <constraint firstAttribute="trailing" secondItem="6Ac-hY-QKJ" secondAttribute="trailing" id="ayK-AH-gqw"/>
+                <constraint firstAttribute="trailing" secondItem="0Ip-RW-iit" secondAttribute="trailing" id="iFw-KO-OxI"/>
+                <constraint firstItem="0Ip-RW-iit" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="rwo-Fq-4GM"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-            <variation key="heightClass=compact">
-                <mask key="constraints">
-                    <include reference="Gzr-a2-ChU"/>
-                </mask>
-            </variation>
+            <point key="canvasLocation" x="-4457.5" y="3201.5"/>
         </view>
     </objects>
 </document>
