--- a/Caronae/Ride/RideListController.xib
+++ b/Caronae/Ride/RideListController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -13,6 +13,7 @@
             <connections>
                 <outlet property="directionControl" destination="EV6-FJ-bWI" id="6os-mv-9Pg"/>
                 <outlet property="filterLabel" destination="g7Q-xw-iaC" id="Uhy-PG-2pW"/>
+                <outlet property="filterViewHeight" destination="Snl-jF-m6s" id="9po-xJ-OJR"/>
                 <outlet property="filterViewHeightZero" destination="KkT-80-EcW" id="5Wf-bl-c9Z"/>
                 <outlet property="tableView" destination="6Ac-hY-QKJ" id="WUU-Ci-sdD"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -32,7 +33,7 @@
                     </connections>
                 </tableView>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="EV6-FJ-bWI">
-                    <rect key="frame" x="56" y="120" width="263" height="29"/>
+                    <rect key="frame" x="56" y="112" width="263" height="29"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <segments>
                         <segment title="Chegando na UFRJ"/>
@@ -56,10 +57,10 @@
                     </connections>
                 </segmentedControl>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Ip-RW-iit" userLabel="FilterView">
-                    <rect key="frame" x="0.0" y="64" width="375" height="45"/>
+                    <rect key="frame" x="0.0" y="64" width="375" height="37"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hah-mc-HGX">
-                            <rect key="frame" x="154.5" y="9" width="205.5" height="28"/>
+                            <rect key="frame" x="154.5" y="5" width="205.5" height="28"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                             <state key="normal" title="LIMPAR">
                                 <color key="titleColor" red="0.92941176470588238" green="0.1803921568627451" blue="0.050980392156862744" alpha="1" colorSpace="calibratedRGB"/>
@@ -69,13 +70,13 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Filtrando:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ETP-H5-MAv">
-                            <rect key="frame" x="8" y="15" width="55.5" height="15"/>
+                            <rect key="frame" x="8" y="11" width="55.5" height="15"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                             <color key="textColor" red="0.33725490196078434" green="0.33725490196078434" blue="0.34509803921568627" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Freguesia, CT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g7Q-xw-iaC">
-                            <rect key="frame" x="71.5" y="15" width="78" height="15"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CT, Freguesia" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g7Q-xw-iaC">
+                            <rect key="frame" x="71.5" y="11" width="78" height="15"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <color key="textColor" red="0.33725490200000002" green="0.33725490200000002" blue="0.34509803919999998" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -88,7 +89,7 @@
                         <constraint firstItem="ETP-H5-MAv" firstAttribute="leading" secondItem="0Ip-RW-iit" secondAttribute="leading" constant="8" id="8FZ-h3-O8Y"/>
                         <constraint firstItem="g7Q-xw-iaC" firstAttribute="leading" secondItem="ETP-H5-MAv" secondAttribute="trailing" constant="8" id="Azq-f4-Kej"/>
                         <constraint firstAttribute="height" id="KkT-80-EcW"/>
-                        <constraint firstAttribute="height" priority="900" constant="45" id="Snl-jF-m6s"/>
+                        <constraint firstAttribute="height" priority="900" constant="37" id="Snl-jF-m6s"/>
                         <constraint firstAttribute="trailing" secondItem="Hah-mc-HGX" secondAttribute="trailing" constant="15" id="jZA-KK-YgS"/>
                         <constraint firstItem="g7Q-xw-iaC" firstAttribute="centerY" secondItem="0Ip-RW-iit" secondAttribute="centerY" id="n5t-qE-UQE"/>
                         <constraint firstItem="Hah-mc-HGX" firstAttribute="leading" secondItem="g7Q-xw-iaC" secondAttribute="trailing" constant="5" id="y5m-OA-Wzk"/>
